examples/negative/pub_enforcement/priv_field_external_read/lib.kai
# Library module: declares a `pub type` whose `secret` field is
# explicitly marked `priv`. The field is invisible to consumer
# modules — the post-typing walker `check_field_privacy` rejects
# external reads.

pub type Box = { priv secret: Int }

pub fn make_box(n: Int) : Box = Box { secret: n }

pub fn placeholder() : Int = 0
